# utter

./: .env.example  .gitignore  IMPLEMENTATION-SUMMARY.md  PHASE0-SUMMARY.md  README.md
android-app/: MainActivity.kt  README.md  activity_main.xml  build.sh  install.sh  settings.gradle.kts
android-app/app/: build.gradle.kts
crypto-spike/: App.tsx  CryptoTest-AES-GCM.ts  CryptoTest.ts  PHASE0-DECISION.md  PHASE0-RESULTS.md  app.json  package.json  pnpm-lock.yaml  test-aes-gcm.ts  test-node.ts  tweetnacl-util.d.ts
docs/: E2E.md  EXPO.md  GOOGLE_CLOUD_SETUP.md  JWT.md  OAUTH.md  PAIRING.md  PLAN.md
linux-client/: .gitignore  README.md  TEST_RESILIENCE.md  utter_client.py
linux-test-client/: .env.example  README.md  package.json  pnpm-lock.yaml
linux-test-client/src/: index.ts
linux-test-client/src/crypto/: encryption.ts  index.ts  keys.ts
linux-test-client/src/oauth/: auth.ts
mobile-app/: .mise.toml  App.tsx  DEPLOYMENT.md  MIGRATION.md  README.md  TESTING.md  app.json  babel.config.js  build.sh  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
mobile-app/src/@types/: env.d.ts
mobile-app/src/hooks/: useAuth.ts
mobile-app/src/navigation/: AppNavigator.tsx
mobile-app/src/screens/: DeviceListScreen.tsx  SignInScreen.tsx  (+2 more)
relay-server/: .env.example  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
relay-server/src/: auth.ts  config.ts  index.ts  jwt.ts
utterd/: Cargo.toml  README.md  TEST_RESILIENCE.md  build.rs  utterd.py
utterd/src/: auth.rs  main.rs  oauth.rs
utterd/src/crypto/: encryption.rs  keys.rs  mod.rs
(+28 files in other folders)
