[package]
name = "utterd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utterd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
hostname = "0.3"
