[package]
name = "utterd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "utterd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hostname = "0.3"

# Cryptography for E2E encryption
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "5.0"

# OAuth for Google authentication
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
urlencoding = "2.1"
